# Frogman-Engine

./: .gitattributes  .gitignore  Install-CMake-3_26_4-Windows-x86-64.bat  Install-CMake-3_27_1-Windows-x86-64.bat  Install-CMake-3_27_7-Windows-x86-64.bat  LICENSE  LICENSE.md  ReadMe.md
Frogman-Engine-Core-Library/CMakeLists/: CMakeLists.txt  Configure-Projects.bat  Configure-Projects.sh  Configure-Projects.tar.xz
Frogman-Engine-Core-Library/CMakeLists/FE_CORE_AVX/: CMakeLists.txt
Frogman-Engine-Core-Library/CMakeLists/FE_CORE_AVX2/: CMakeLists.txt
Frogman-Engine-Core-Library/CMakeLists/FE_CORE_AVX512/: CMakeLists.txt
Frogman-Engine-Core-Library/CMakeLists/FE_CORE_DEBUGGER/: CMakeLists.txt  main.cpp
Frogman-Engine-Core-Library/Debugger/CMake/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/: README.md  (+1 more)
Frogman-Engine-Tests/FE-Tests/: CMakeLists.txt  build-tests.sh  run-all-tests.sh  run-tests.sh
Frogman-Engine-Tests/FE-Tests/FE.Renderer/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.algorithm.math/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.algorithm.string/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.algorithm.utility/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.containers/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.fstring/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.hash/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.iterator/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.log/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.managed/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.memory/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.pool/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.prerequisites/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.smart_ptrs/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.string/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.string_view/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.thread/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.core.type_traits/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.framework.predefined_main/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/FE.framework.reflection/: CMakeLists.txt  main.cpp
Frogman-Engine-Tests/FE-Tests/Fuzz-Tests/: CMakeLists.txt  build-fuzz.bat  build-fuzz.sh  run-fuzz.sh
Frogman-Engine-Tests/FE-Tests/Fuzz-Tests/binaries/: FE.core.algorithm.string.capitalize  FE.core.algorithm.string.capitalize_every_first_letter_of_words  FE.core.algorithm.string.count_chars  FE.core.algorithm.string.length  FE.core.algorithm.string.to_lowercase
Frogman-Engine-Tests/FE-Tests/Fuzz-Tests/tests/: FE.core.algorithm.string.capitalize.cpp  FE.core.algorithm.string.capitalize_every_first_letter_of_words.cpp  FE.core.algorithm.string.count_chars.cpp  FE.core.algorithm.string.length.cpp  FE.core.algorithm.string.to_lowercase.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/: CMakeLists.txt  build-tests.bat  build-tests.sh  run-tests.sh
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.adjacency_graph/: CMakeLists.txt  FE.core.adjacency_graph_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.math/: CMakeLists.txt  FE.core.algorithm.math_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.string/: CMakeLists.txt  FE.core.algorithm.string_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.algorithm.utility/: CMakeLists.txt  FE.core.algorithm.utility_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.containers/: CMakeLists.txt  FE.core.containers_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.fstring/: CMakeLists.txt  FE.core.fstring_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.hash/: CMakeLists.txt  FE.core.hash_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.iterator/: CMakeLists.txt  FE.core.iterator_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.log/: CMakeLists.txt  FE.core.log_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.managed/: CMakeLists.txt  FE.core.managed_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.memory/: CMakeLists.txt  FE.core.memory_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.pool/: CMakeLists.txt  FE.core.pool_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.prerequisites/: CMakeLists.txt  FE.core.prerequisites_test  main.cpp
Frogman-Engine-Tests/FE-Tests/Unit-Tests/FE.core.string/: CMakeLists.txt  FE.core.string_test  main.cpp
Frogman-Engine-Tests/FE-Tests/prerequisites/: CMakeLists.txt  main.cpp
In-House/Libraries/FE.framework/: CMakeLists.txt  build.sh
Launcher/CMake/: CMakeLists.txt  generated.cpp
SDK/Core/CMake/: CMakeLists.txt  build.bat  build.sh
SDK/Framework/CMake/: CMakeLists.txt  build.sh
SDK/Header-Tool/CMake/: CMakeLists.txt  build.bat  generated.cpp
SDK/Template/CMake/: CMakeLists.txt  build.bat  generated.cpp
SDK/Tests/Unit-Tests/: CMakeLists.txt  FE.ECS.cpp  FE.ECS.hpp  FE.algorithm.math.cpp  FE.algorithm.string.cpp  FE.algorithm.utility.cpp  FE.fcontainer.cpp  FE.framework.ECS.cpp  FE.framework.ECS.hpp  FE.framework.managed.cpp  FE.framework.reflection.cpp  FE.framework.string.cpp  FE.framework.string_view.cpp  FE.hash.cpp  FE.iterator.cpp  FE.log.cpp  FE.memory.cpp  FE.pool.cpp  FE.task.cpp  app.cpp  build.bat  generated.cpp
Source/CMakeLists/: CMakeLists.txt  Configure-Projects.bat  Configure-Projects.sh  frogman-engine.cmake  predefined-settings.cmake
Source/CMakeLists/FE_AVX/: CMakeLists.txt
Source/CMakeLists/FE_CORE_AVX/: CMakeLists.txt
Source/CMakeLists/FE_CORE_FRAMEWORK/: CMakeLists.txt
Source/CMakeLists/FE_CORE_TEST/: CMakeLists.txt  main.cpp
Source/CMakeLists/FE_FRAMEWORK/: CMakeLists.txt
Source/CMakeLists/FE_TEST/: CMakeLists.txt  main.cpp
(+1344 files in other folders)
