CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0...3.31.2)
# Copyright © 2024 to present UNKNOWN STRYKER. All Rights Reserved.
PROJECT(Frogman-Engine-Launcher
        VERSION 0.0
        DESCRIPTION "Frogman Engine Launcher"
        LANGUAGES CXX)


INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/../../SDK/CMake/predefined-settings.cmake")
INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/../../SDK/CMake/frogman-engine.cmake")


#SET(HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../Include/HeaderWithCopyright.hpp)
#RUN_HEADER_TOOL("${HEADERS}" "${CMAKE_CURRENT_LIST_DIR}/../LICENSE.txt")

ADD_FROGMAN_EXECUTABLE(${CMAKE_PROJECT_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/../Source/main.cpp"
)

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../Binaries")

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} ${FROGMAN_ENGINE_SDK})

